[package]
name = "eugene_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eugene_rs"
version = "0.1.0"
edition = "2021"
features = ["extension-module"]
crate-type = ["cdylib", "rlib"]

[dependencies]
bit-vec = "*"
svg = "*"
rand = "*"
num = "*"
#grb = "*"
pathfinding = "*"
#itertools = "*"
#pyo3 = { version = "*", features = ["extension-module"] }

[dependencies.pyo3]
version = "0.21.1"
features = ["extension-module", "abi3-py39"]

[features]
extension-module = ["pyo3/extension-module"]
