[package]
name = "eugene_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eugene_core"
version = "0.1.0"
edition = "2021"
crate-type = ["lib"]

[dependencies]
pathfinding = "4.9.1"
svg = "0.17.0"
rand = "0.8.5"
bit-vec = "0.6.3"
#grb = "2.0.0"
itertools = "0.13.0"
