[package]
name = "eugene_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eugene_core"
crate-type = ["lib"]

[[bin]]
name = "example-to-profile"
path = "bin/example_to_profile.rs"

[[bin]]
name = "full-join-test"
path = "bin/full_join_test.rs"

[[bin]]
name = "btree-map-test"
path = "bin/btree_map_test.rs"

[dependencies]
pathfinding = "4.9.1"
svg = "0.17.0"
rand = "0.8.5"
bit-vec = "0.6.3"
#grb = "2.0.0"
itertools = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
btree-range-map = { version = "0.7.2", features = ["serde"] }
num-bigint = "0.4.6"
range-traits = "0.3.2"
